--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "building-control-scraper",
   "version": "1.0.0",
   "description": "Small Node.js scrapers for building control pages (Playwright + Got).",
+  "type": "module",
   "main": "task1.js",
   "scripts": {
     "task1": "node task1.js",
@@ -10,7 +11,9 @@
   "author": "Elena Gusarevich",
   "license": "MIT",
   "dependencies": {
+    "cheerio": "^1.1.2",
+    "got": "^14.6.5",
     "playwright": "^1.49.0",
-    "got": "^14.0.0"
+    "tough-cookie": "^6.0.0"
   }
 }
